<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/entry_num1"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Value 1"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/entry_num2"
        app:layout_constraintEnd_toStartOf="@+id/entry_num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <EditText
        android:id="@+id/entry_num2"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Value 2"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/default_output_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/emoji_add"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_subtract"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/emoji_subtract"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_multiply"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/output_text" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/emoji_multiply"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_subtract"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_divide"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_remainder"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_remainder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_remainder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_subtract"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_subtract"
        app:layout_constraintTop_toBottomOf="@+id/btn_subtract" />

    <Button
        android:id="@+id/btn_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_pow2"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_remainder"
        app:layout_constraintEnd_toEndOf="@+id/btn_multiply"
        app:layout_constraintStart_toStartOf="@+id/btn_multiply" />

    <Button
        android:id="@+id/btn_sq_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_under_root"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_factorial"
        app:layout_constraintEnd_toEndOf="@+id/btn_divide"
        app:layout_constraintStart_toStartOf="@+id/btn_divide" />

    <Button
        android:id="@+id/btn_factorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_factorial"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_remainder"
        app:layout_constraintStart_toStartOf="@+id/btn_remainder"
        app:layout_constraintTop_toBottomOf="@+id/btn_remainder" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_log_base_10"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_factorial"
        app:layout_constraintEnd_toEndOf="@+id/btn_square"
        app:layout_constraintStart_toStartOf="@+id/btn_square" />

    <Button
        android:id="@+id/btn_ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_natural_log"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_factorial"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_factorial"
        app:layout_constraintTop_toBottomOf="@+id/btn_factorial"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>